[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/upheaval.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://audio/ui/ui_select.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/ui/ui_focus.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MenuButton" type="TextureButton"]
margin_top = 45.0
margin_right = 384.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
FocusAudio = ExtResource( 4 )
SelectAudio = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Text"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MenuButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_MenuButton_pressed"]
